Agregando seguridad a usuarios

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
 body {
-  margin: 0;  
+  margin: 0;
+  /* background-image: url("http://svite-league-apps-content.s3.amazonaws.com/bgimages/wood.jpg");
+  background-repeat: repeat; */
 }
